# Tempolavra

./: .gitignore  README.md  mkdocs.yml  premake5.lua  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pull_requests.yml  python-package-conda.yml
docs/: index.md  tempolavra.md  time_coords.md  time_to_text.md
img/: front_plate_design.txt
include/: coords_util.h  time_to_coords.h
src/: coords_util.cpp  main.cpp  time_to_coords.cpp
src/tempolavra/: tempolavra.py  time_coords.py  time_to_text.py
tests/: test_tempolavra.py  test_time_coords.py  test_time_to_text.py
