[flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "venv"]
ignore = ["E266"]
max-complexity = 18

[tool.black]
line-length = 100
-force-exclude = "esp8266/"

[tool.isort]
profile = "black"
line_length = 100
extend_skip = "esp8266/"

[tool.poetry]
name = "tempolavra"
version = "0.1.0"
description = "Tempolavra is a Python package that generates a wordclock in Portuguese. Basically, it displays the current time using words, arranged in a grid, which form the phrase for the current time, with 5 minute intervals."
authors = ["LucasRochaAbraao <lucasrabraao@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
taskipy = "^1.10.3"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[tool.pytest]
addopts = ["--verbose"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=tempolavra --cov-report=term-missing -vv --pyargs tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

